--- a/samadhan-app/.gitignore
+++ b/samadhan-app/.gitignore
@@ -43,3 +43,12 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment variables - DO NOT COMMIT
+.env
+.env.local
+.env.*.local
+
+# Firebase files - DO NOT COMMIT
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
